add python script and schedular